2008-01-05  Øyvind Kolås  <pippin@gimp.org>

	* app/gegl/gegl/gegl-operation-sink.h:
	* app/gegl/gegl/gegl-operation-source.h:
	* app/gegl/gegl/gegl-operation.h:
	* app/gegl/gegl/gegl-types.h:
	* app/gegl/gegl/graph/:
	* app/gegl/gegl/graph/gegl-node-context.h: synchronoised with GEGL
	headers.

	* app/gegl/gimpoperationtilesink.c:
	* app/gegl/gimpoperationtilesource.c: updated to new API, where a
	GeglNodeContext is used in process methods instead of gpointer
	context_id.

2008-01-04  Øyvind Kolås  <pippin@gimp.org>

	* app/gegl/gegl/gegl-operation-sink.h:
	* app/gegl/gegl/gegl-operation-source.h:
	* app/gegl/gegl/gegl-operation.h: synchronised with GEGL headers.

	* app/gegl/gimpoperationtilesink.c:
	* app/gegl/gimpoperationtilesource.c: added const GeglRectangle
	*result to arguments of _process().

2008-01-04  Sven Neumann  <sven@gimp.org>

	* app/config/gimpdisplayconfig.c: changed the default marching ants
	speed to 200.

2008-01-04  Hans Breuer  <hans@breuer.org>

	**/makefile.msc app/gimpcore.def : updated so it compiles and links
	(almost, see bug #507298)
	
2008-01-04  Sven Neumann  <sven@gimp.org>

	Merged from gimp-2-4 branch:

	* app/display/gimpdisplayshell-selection.c:
	draw marching ants with G_PRIORITY_DEFAULT_IDLE; fixes bug #479875.

2008-01-04  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/color.pdb: optionally use gegl where we already
	have operations (breaking the indentation to keep the diff small
	and readable).

	* app/pdb/Makefile.am: add GEGL_CFLAGS.

	* app/pdb/color_cmds.c: regenerated.

2008-01-04  Michael Natterer  <mitch@gimp.org>

	* app/config/gimpcoreconfig.[ch]: add "use-gegl" property but
	don't serialize it.

	* app/widgets/gimptoolbox.c: add super ugly "Use GEGL" toggle to
	the toolbox so we don't need to have prefs open all the time when
	experimenting with gegl.

	* app/tools/gimpimagemaptool.[ch]: remove "Use GEGL" toggle from
	the tool dialogs and connect to the config property instead.
